fixed image alignment

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ body {
     z-index: 10;
     padding: 30px;
     padding-top: 20px;
-    padding-bottom: 55px;
+    padding-bottom: 70px;
     line-height: 50px;
     width: 70%;
     max-width: 300px;
@@ -212,7 +212,7 @@ body {
   }
 
   img {
-    width: 90%;
+    width: 80%;
     margin-top: 40px;
     margin-left: 30px;
     border-radius: 10px;
